cmake_minimum_required(VERSION 3.21.0)
project(c_prog_lang VERSION 0.1.0 LANGUAGES C)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin)
set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/main)

# Source Directories
set(CHAP1_DIR ${SOURCE_DIR}/chap1)
set(CHAP2_DIR ${SOURCE_DIR}/chap2)

include(CTest)
enable_testing()

# Target Executables
set(target c1_1)
add_executable(${target} ${CHAP1_DIR}/1-1.c)
set(target c1_2)
add_executable(${target} ${CHAP1_DIR}/1-2.c)
set(target c1_3)
add_executable(${target} ${CHAP1_DIR}/1-3.c)
set(target c1_4)
add_executable(${target} ${CHAP1_DIR}/1-4.c)
set(target c1_5)
add_executable(${target} ${CHAP1_DIR}/1-5.c)
set(target c1_6)
add_executable(${target} ${CHAP1_DIR}/1-6.c)
set(target c1_7)
add_executable(${target} ${CHAP1_DIR}/1-7.c)
set(target c1_8)
add_executable(${target} ${CHAP1_DIR}/1-8.c)
set(target c1_9)
add_executable(${target} ${CHAP1_DIR}/1-9.c)
set(target c1_10)
add_executable(${target} ${CHAP1_DIR}/1-10.c)
set(target c1_11)
add_executable(${target} ${CHAP1_DIR}/1-11.c)
set(target c1_12)
add_executable(${target} ${CHAP1_DIR}/1-12.c)
set(target c1_13)
add_executable(${target} ${CHAP1_DIR}/1-13.c)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
