add_executable(c1_1 1-1.c)
add_executable(c1_2 1-2.c)
add_executable(c1_3 1-3.c)
add_executable(c1_4 1-4.c)
add_executable(c1_5 1-5.c)
add_executable(c1_6 1-6.c)
add_executable(c1_7 1-7.c)
add_executable(c1_8 1-8.c)
add_executable(c1_9 1-9.c)
add_executable(c1_10 1-10.c)
add_executable(c1_11 1-11.c)
add_executable(c1_12 1-12.c)
add_executable(c1_13 1-13.c)
add_executable(c1_14 1-14.c)
add_executable(c1_15 1-15.c)
add_executable(c1_16 1-16.c)
add_executable(c1_17 1-17.c)
add_executable(c1_18 1-18.c)
add_executable(c1_19 1-19.c)
add_executable(c1_20 1-20.c)
add_executable(c1_21 1-21.c)
add_executable(c1_22 1-22.c)
add_executable(c1_23 1-23.c)
add_executable(c1_24 1-24.c)